--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "typescript": "5.4.3"
   },
   "dependencies": {
+    "@fastify/cookie": "9.3.1",
+    "@fastify/cors": "9.0.1",
+    "@fastify/jwt": "8.0.0",
     "@prisma/client": "5.11.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
